--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: IT System Design, Scot Henderson
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Scot Henderson!</h1>
+	<h1>Hi there from I.T. System Design!</h1>
 	<p>We supply to Home and Business all IT solutions. <a href="/about">Read more about our services...</a></p>
 </div><!-- /.blurb -->
